add more images to the notebooks

--- a/composition.ipynb
+++ b/composition.ipynb
@@ -56,7 +56,11 @@
     "First we specify the composition pattern which dictates the interactions between the three submodels.\n",
     "In particular the SIR and VIvR models share the recovered population (R), the SIR and cross-exposure models share the\n",
     "susceptible and infected unvaccinated populations (S, I), and the VIvR and cross-exposure models share the\n",
-    "susceptible and infected vaccinated populations (V, Iv)."
+    "susceptible and infected vaccinated populations (V, Iv).\n",
+    "\n",
+    "This construction follows the figure from the paper\n",
+    "\n",
+    "![sviivr model](img/sviivr.png)"
    ]
   },
   {
